--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <header>
-        <h1>Java Unit Test Reporter</h1>
+        <h1>JavaCode validator & Reporter</h1>
         <p class="subtitle">Upload your Java files for automated testing</p>
     </header>
 
