--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -53,7 +53,7 @@
                     <polyline points="17 8 12 3 7 8"></polyline>
                     <line x1="12" y1="3" x2="12" y2="15"></line>
                 </svg>
-                Upload & Run
+                Upload & Test
             </button>
             <button id="viewReportsBtn" class="btn btn-secondary" onclick="loadEmployees()" style="display:none;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
