--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,7 +39,7 @@
                         <path d="M5.884 6.68 4.332 9.5h.855l.822-1.482.823 1.482h.855L6.142 6.68l1.246-2.18h-.855l-.823 1.482-.822-1.482H4.332l1.552 2.18z"/>
                         <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h6.5L14 4.5zM13.5 4H10V.5L13.5 4z"/>
                     </svg>
-                    <span>Choose Testcase file</span>
+                    <span>Choose Testdata file</span>
                 </label>
                 <input type="file" id="excelInput" accept=".xlsx,.xls">
                 <div id="selectedExcelFile" class="selected-file">No file selected</div>
